[tool.poetry]
name = "python_src"
version = "0.1.0"
description = ""
authors = ["uhTVik <uhatov007@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.7"
torch = "^1.10.2"
numpy = "1.21.2"
opencv-python = "^4.5.5"
torchvision = "^0.11.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
